--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,8 +1,10 @@
-@import '../../node_modules/antd/dist/antd.css';
-@import 'Register.css';
-@import 'Main.css';
+@import "../../node_modules/antd/dist/antd.css";
+@import "Register.css";
+@import "Main.css";
 @import "Login.css";
 @import "Header.css";
+@import "Home.css";
+
 
 .App {
   text-align: center;
